<resources>
    <string name="app_name">DIGIApp</string>
    <string name="digi_name">DIGI</string>
    <string name="digi_fields">Campos</string>
    <string name="digi_level">Niveles</string>
    <string name="digi_attribute">Atributos</string>
    <string name="digi_type">Tipos</string>
    <string name="digi_search">Nombre o Id</string>
    <string name="digi_button">Buscar</string>
    <string name="skills">Habilidades</string>
    <string name="pre_evoluciones">Prevoluciones</string>
    <string name="post_evolutions">Evoluciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>