<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/digiName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/digi_name"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@font/digi_normal"
        android:background="@drawable/gradient_drawable"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextDigiNameOrId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:fontFamily="@font/digi_italic"
            android:hint="@string/digi_search"/>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/digi_normal"
            android:text="@string/digi_button"
            android:backgroundTint="@color/end"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/digimon_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/digimon_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/digi_level"
            android:fontFamily="@font/digi_normal"
            android:textColor="@color/end"
            android:gravity="center"/>

        <TextView
            android:id="@+id/digimon_attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/digi_attribute"
            android:fontFamily="@font/digi_normal"
            android:textColor="@color/end"
            android:gravity="center"/>

        <TextView
            android:id="@+id/digimon_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/digi_type"
            android:fontFamily="@font/digi_normal"
            android:textColor="@color/end"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/digimonLevels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/digimonAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/digimonTypes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digi_fields"
        android:fontFamily="@font/digi_normal"
        android:textColor="@color/end"
        android:gravity="center"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/digimonFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"/>
</LinearLayout>